@@ -37,6 +37,10 @@ POSSIBILITY OF SUCH DAMAGE.
 #define LIBTORRENT_VERSION_MINOR 16
 #define LIBTORRENT_VERSION_TINY 0
 
+// the format of this version is: MMmmtt
+// M = Major version, m = minor version, t = tiny version
+#define LIBTORRENT_VERSION_NUM ((LIBTORRENT_VERSION_MAJOR * 10000) + (LIBTORRENT_VERSION_MINOR * 100) + LIBTORRENT_VERSION_TINY)
+
 #define LIBTORRENT_VERSION "0.16.0.0"
 #define LIBTORRENT_REVISION "$Rev$" 
 
